--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "karma": "karma start karma.conf.js --log-level debug --single-run"
   },
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.14",
     "angular": "^1.6.8",
     "angular-animate": "^1.6.8",
     "angular-aria": "^1.6.8",
     "angular-material": "^1.1.6",
     "angular-messages": "^1.6.8",
+    "angular-resource": "^1.6.9",
     "angular-route": "^1.6.8",
+    "angular-sanitize": "^1.6.9",
     "aplay": "^1.2.0",
     "body-parser": "^1.16.0",
     "browserify": "^15.2.0",
@@ -53,6 +56,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-html-build": "^0.7.1",
     "http-proxy": "^1.14.0",
+    "ionic": "^3.19.1",
     "ip": "^1.1.5",
     "jquery": "^3.2.1",
     "koa": "^2.2.0",
